--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.71.3",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "^13.8.0",
     "react-native-web": "~0.18.10",
     "styled-components": "^5.3.8"
   },
